--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,8 @@
 <!-- Create your form here -->
+<h1>Student Form</h1>
+<%= form_tag students_path %>
+  <label for="first_name">First Name:</label>
+  <%= text_field_tag ,'first_name'%>
+
+  <label for="last_name">Last Name:</label>
+  <%= text_field_tag ,'last_name'%>
