--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -7,4 +7,5 @@
   <label for="last_name">Last Name:</label>
   <%= text_field_tag ,'last_name'%>
 
-  <%= submit_tag 'Submit Student'
+  <%= submit_tag 'Submit Student'%>
+<% end %>
