--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,10 +2,10 @@
 <h1>Student Form</h1>
 <%= form_tag students_path %>
   <label for="first_name">First Name:</label>
-  <%= text_field_tag ,'first_name'%>
+  <%= text_field_tag :'first_name'%>
 
   <label for="last_name">Last Name:</label>
-  <%= text_field_tag ,'last_name'%>
+  <%= text_field_tag :'last_name'%>
 
   <%= submit_tag 'Submit Student'%>
 <% end %>
