--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,6 +1,6 @@
 <!-- Create your form here -->
 <h1>Student Form</h1>
-<%= form_tag students_path %>
+<%= form_tag students_path do%>
   <label for="first_name">First Name:</label>
   <%= text_field_tag :'first_name'%><br>
 
